校验输入
