# docs/swagger.json
@@ -1,17 +1,42 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "聊天系统 API文档",
+        "title": "GO-Gin-Chat-API",
+        "contact": {},
+        "version": "1.0 版本"
     },
+    "basePath": "/api",
     "paths": {
         "/user/create": {
             "post": {
                 "tags": [
-                    "用户列表"
+                    "用户模块"
+                ],
+                "summary": "创建用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "验证密码",
+                        "name": "repassword",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "code\", \"message\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -22,7 +47,16 @@
         "/user/delete": {
             "post": {
                 "tags": [
-                    "用户列表"
+                    "用户模块"
+                ],
+                "summary": "删除用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "id",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -37,11 +71,48 @@
         "/user/list": {
             "get": {
                 "tags": [
-                    "用户列表"
+                    "用户模块"
                 ],
+                "summary": "用户列表",
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/update": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "修改用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
                         "schema": {
                             "type": "string"
                         }
