# models/user_basic.go
@@ -25,6 +25,26 @@ type UserBasic struct {
 func (table *UserBasic) TableName() string {
 	return "user_basic"
 }
+func FindUserByID(id int) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("id = ?", id).First(&user)
+	return user
+}
+func FindUserByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+func FindUserByPhone(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ?", phone).First(&user)
+	return user
+}
+func FindUserByEmail(email string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("email = ?", email).First(&user)
+	return user
+}
 
 func GetUserList() []*UserBasic {
 	data := make([]*UserBasic, 10)
@@ -37,4 +57,8 @@ func CreateUser(user UserBasic) *gorm.DB {
 
 func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord})
 }
